--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ llama-index==0.8.33
 numpy==1.24.0
 onnx==1.14.1
 openai==0.27.4
+
+mpi4py==3.1.5:x
+
 openapi-schema-pydantic==1.2.4
 pandas==2.0.3
 pydantic==2.3.0
@@ -23,4 +26,3 @@ tiktoken==0.3.3
 tokenizers==0.13.3
 transformers==4.31.0
 faiss-cpu==1.7.4
-mpi4py==3.1.5
