--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,8 @@ numpy==1.24.0
 onnx==1.14.1
 openai==0.27.4
 
-mpi4py==3.1.5:x
+# mpi4py==3.1.5:x
+mpi4py==3.1.0:x
 
 openapi-schema-pydantic==1.2.4
 pandas==2.0.3
